--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,15 @@
-html,
+html {
+  overflow-x: hidden;
+}
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+
+  max-width: 500px;
+  background: #181923;
+  color: white;
 }
 
 a {
@@ -21,6 +27,6 @@ a {
   }
   body {
     color: white;
-    background: black;
+    background: #181923;
   }
 }
