--- a/components/Hero.module.css
+++ b/components/Hero.module.css
@@ -4,7 +4,14 @@
 
 .hero {
   text-align: center;
-  margin: 40px auto;
+  margin: 0px auto 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 500px;
+  padding-right: 10px;
+  padding-left: 10px;
+  padding-right: 20px;
 }
 
 .title {
@@ -37,4 +44,16 @@
   border-radius: 100px;
   margin-right: 5px;
   translate: 0 2px;
+}
+
+.topIcons {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.info {
+  z-index: 222;
 }
