--- a/components/Card.module.css
+++ b/components/Card.module.css
@@ -39,12 +39,17 @@
 .line {
   width: 100%;
   height: 1px;
-  background-color: #ddd;
+  background-color: rgba(255, 255, 255, 0.2);
   margin: 20px 0 7px;
 }
 
 .dateAuthor {
   display: flex;
   justify-content: space-between;
-  color: #ddd;
+  color: rgba(255, 255, 255, 0.9);
+}
+
+.date,
+.name {
+  font-size: 14px;
 }
