--- a/components/common/Button.module.css
+++ b/components/common/Button.module.css
@@ -1,12 +1,14 @@
 .button {
-  padding: 8px 25px;
-  border-radius: 5px;
-  background-color: rgba(0, 0, 0, 0.4);
-  border: 0;
-  outline: none;
-  cursor: pointer;
-}
+  background-color: rgba(0, 0, 0, 0.2);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-.button:hover {
-  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 100px;
+  border: 2px solid white;
+  cursor: pointer;
+  padding: 5px 30px;
+  color: white;
+  font-weight: 500;
+  font-size: 16px;
 }
