--- a/components/Form.module.css
+++ b/components/Form.module.css
@@ -43,8 +43,12 @@
 }
 
 .buttons {
+  max-width: 256px;
+  width: 100%;
+  margin-top: 25px;
   display: flex;
   justify-content: space-between;
+  align-self: center;
 }
 
 .title {
